--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "dotenv -e .env.test -- npx prisma migrate deploy && dotenv -e .env.test -- jest --config ./test/jest-e2e.json",
+    "pretest:e2e": "docker-compose up -d test-db",
+    "posttest:e2e": "docker-compose stop test-db"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -42,10 +44,12 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "jest-mock-extended": "^3.0.5",
     "prettier": "^3.0.0",
     "prisma": "^5.5.0",
     "source-map-support": "^0.5.21",
